k8_utils/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    plugins.konghq.com: https-redirect
spec:
  rules:
    - http:
        paths:         
          - path: /catalog
            backend:
              serviceName: rso1920-catalog
              servicePort: 8088
          - path: /streamer
            backend:
              serviceName: rso1920-video-streamer
              servicePort: 8084
          - path: /file-manager
            backend:
              serviceName: rso1920-file-manager
              servicePort: 8089
          - path: /channels
            backend:
              serviceName: rso1920-channels
              servicePort: 8080
          - path: /users
            backend:
              serviceName: rso1920-users
              servicePort: 8083
          - path: /incomingmsg
            backend:
              serviceName: rso1920-incoming-msg
              servicePort: 8090
          - path: /filedownloader
            backend:
              serviceName: rso1920-file-downloader
              servicePort: 8079
          - path: /auth
            backend:
              serviceName: rso1920-auth
              servicePort: 8084
